k8s/infra/03-postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: circleguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: init-sql
              mountPath: /docker-entrypoint-initdb.d
            - name: pgdata
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "admin"]
            initialDelaySeconds: 10
            periodSeconds: 5
      volumes:
        - name: init-sql
          configMap:
            name: postgres-init-sql
        - name: pgdata
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: circleguard
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
