k8s/infra/04-neo4j.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neo4j
  namespace: circleguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neo4j
  template:
    metadata:
      labels:
        app: neo4j
    spec:
      enableServiceLinks: false
      containers:
        - name: neo4j
          image: neo4j:5.26
          ports:
            - containerPort: 7474
            - containerPort: 7687
          volumeMounts:
            - name: neo4jdata
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /
              port: 7474
            initialDelaySeconds: 30
            periodSeconds: 10
      volumes:
        - name: neo4jdata
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: neo4j-svc
  namespace: circleguard
spec:
  selector:
    app: neo4j
  ports:
    - name: http
      port: 7474
      targetPort: 7474
    - name: bolt
      port: 7687
      targetPort: 7687
---
# NodePort para acceder al Neo4j Browser desde el host
apiVersion: v1
kind: Service
metadata:
  name: neo4j-nodeport
  namespace: circleguard
spec:
  type: NodePort
  selector:
    app: neo4j
  ports:
    - name: http
      port: 7474
      targetPort: 7474
      nodePort: 30474
