k8s/infra/05-zookeeper.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  namespace: circleguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:7.6.0
          ports:
            - containerPort: 2181
          readinessProbe:
            exec:
              command: ["nc", "-z", "localhost", "2181"]
            initialDelaySeconds: 15
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-svc
  namespace: circleguard
spec:
  selector:
    app: zookeeper
  ports:
    - port: 2181
      targetPort: 2181
