k8s/infra/06-kafka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: circleguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.6.0
          ports:
            - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-svc
  namespace: circleguard
spec:
  selector:
    app: kafka
  ports:
    - port: 9092
      targetPort: 9092
