k8s/infra/08-mailhog.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog
  namespace: circleguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailhog
  template:
    metadata:
      labels:
        app: mailhog
    spec:
      containers:
        - name: mailhog
          image: mailhog/mailhog:latest
          ports:
            - containerPort: 1025
            - containerPort: 8025
---
# Servicio interno: notification-service se conecta a mailhog-svc:1025
apiVersion: v1
kind: Service
metadata:
  name: mailhog-svc
  namespace: circleguard
spec:
  selector:
    app: mailhog
  ports:
    - name: smtp
      port: 1025
      targetPort: 1025
    - name: ui
      port: 8025
      targetPort: 8025
---
# NodePort para ver la UI de MailHog desde el host en localhost:30025
apiVersion: v1
kind: Service
metadata:
  name: mailhog-nodeport
  namespace: circleguard
spec:
  type: NodePort
  selector:
    app: mailhog
  ports:
    - name: ui
      port: 8025
      targetPort: 8025
      nodePort: 30025
