k8s/infra/09-openldap.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openldap
  namespace: circleguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openldap
  template:
    metadata:
      labels:
        app: openldap
    spec:
      containers:
        - name: openldap
          image: osixia/openldap:1.5.0
          ports:
            - containerPort: 389
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: openldap-svc
  namespace: circleguard
spec:
  type: ClusterIP
  selector:
    app: openldap
  ports:
    - port: 389
      targetPort: 389
