k8s/infra/13-logstash.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  namespace: circleguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
        - name: logstash
          image: docker.elastic.co/logstash/logstash:8.13.4
          ports:
            - containerPort: 5044
              name: beats
          volumeMounts:
            - name: pipeline
              mountPath: /usr/share/logstash/pipeline
              readOnly: true
          resources:
            requests:
              memory: "512Mi"
              cpu: "200m"
            limits:
              memory: "1Gi"
              cpu: "500m"
      volumes:
        - name: pipeline
          configMap:
            name: logstash-pipeline
---
apiVersion: v1
kind: Service
metadata:
  name: logstash-svc
  namespace: circleguard
spec:
  type: ClusterIP
  selector:
    app: logstash
  ports:
    - name: beats
      port: 5044
      targetPort: 5044
