k8s/infra/16-zipkin.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin
  namespace: circleguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
        - name: zipkin
          image: openzipkin/zipkin:3.3
          ports:
            - containerPort: 9411
          readinessProbe:
            httpGet:
              path: /health
              port: 9411
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 6
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: zipkin-svc
  namespace: circleguard
spec:
  type: ClusterIP
  selector:
    app: zipkin
  ports:
    - port: 9411
      targetPort: 9411
---
apiVersion: v1
kind: Service
metadata:
  name: zipkin-nodeport
  namespace: circleguard
spec:
  type: NodePort
  selector:
    app: zipkin
  ports:
    - port: 9411
      targetPort: 9411
      nodePort: 30093
